Added Reset Password endpoint and updated history/current to fall under deliveries for now
