# controllers/Deliveries.js
@@ -10,6 +10,14 @@ module.exports.addressGET = function addressGET (req, res, next) {
   Deliveries.addressGET(req.swagger.params, res, next);
 };
 
+module.exports.deliveriesCurrentGET = function deliveriesCurrentGET (req, res, next) {
+  Deliveries.deliveriesCurrentGET(req.swagger.params, res, next);
+};
+
+module.exports.deliveriesHistoryGET = function deliveriesHistoryGET (req, res, next) {
+  Deliveries.deliveriesHistoryGET(req.swagger.params, res, next);
+};
+
 module.exports.deliveryGET = function deliveryGET (req, res, next) {
   Deliveries.deliveryGET(req.swagger.params, res, next);
 };
