# controllers/UserService.js
@@ -1,55 +1,5 @@
 'use strict';
 
-exports.currentGET = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * offset (Integer)
-  * limit (Integer)
-  **/
-    var examples = {};
-  examples['application/json'] = {
-  "offset" : 123,
-  "limit" : 123,
-  "count" : 123,
-  "history" : [ {
-    "uuid" : "aeiou"
-  } ]
-};
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-}
-
-exports.historyGET = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * offset (Integer)
-  * limit (Integer)
-  **/
-    var examples = {};
-  examples['application/json'] = {
-  "offset" : 123,
-  "limit" : 123,
-  "count" : 123,
-  "history" : [ {
-    "uuid" : "aeiou"
-  } ]
-};
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-}
-
 exports.profileGET = function(args, res, next) {
   /**
    * parameters expected in the args:
@@ -72,5 +22,14 @@ exports.profileGET = function(args, res, next) {
     res.end();
   }
   
+}
+
+exports.resetPOST = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * email (String)
+  **/
+  // no response value expected for this operation
+  res.end();
 }
 
